service worker: Let register('data://blah') throw a TypeError

register('data://blah') should throw a TypeError instead of SecurityError.
If scopeURL’s scheme is not one of "http" and "https", reject promise
with a TypeError and abort these steps.[1]

[1]: https://w3c.github.io/ServiceWorker/#start-register-algorithm

Bug: 877138
Change-Id: Ic1e8cae52ec9393152044aa37da389eb499165bb
Reviewed-on: https://chromium-review.googlesource.com/c/1189688
Commit-Queue: Amos Lim <eui-sang.lim@samsung.com>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608635}
Former-commit-id: 786b49188d3d930b2112de2a4242e902e2568550