third_party/blink/renderer/modules/service_worker/service_worker_container_test.cc
@@ -1,4 +1,3 @@
-
 // Copyright 2014 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
@@ -121,6 +120,33 @@ class ExpectDOMException : public ScriptValueTest {
   String expected_message_;
 };
 
+// Matches a ScriptValue and a TypeError with a message.
+class ExpectTypeError : public ScriptValueTest {
+ public:
+  ExpectTypeError(const String& expected_message)
+      : expected_message_(expected_message) {}
+
+  ~ExpectTypeError() override = default;
+
+  void operator()(ScriptValue value) const override {
+    v8::Isolate* isolate = value.GetIsolate();
+    v8::Local<v8::Context> context = value.GetContext();
+    v8::Local<v8::Object> error_object =
+        value.V8Value()->ToObject(context).ToLocalChecked();
+    v8::Local<v8::Value> name =
+        error_object->Get(context, V8String(isolate, "name")).ToLocalChecked();
+    v8::Local<v8::Value> message =
+        error_object->Get(context, V8String(isolate, "message"))
+            .ToLocalChecked();
+
+    EXPECT_EQ("TypeError", ToCoreString(name->ToString(isolate)));
+    EXPECT_EQ(expected_message_, ToCoreString(message->ToString(isolate)));
+  }
+
+ private:
+  String expected_message_;
+};
+
 // Service Worker-specific tests.
 
 class NotReachedWebServiceWorkerProvider : public WebServiceWorkerProvider {
@@ -128,7 +154,7 @@ class NotReachedWebServiceWorkerProvider : public WebServiceWorkerProvider {
   ~NotReachedWebServiceWorkerProvider() override = default;
 
   void RegisterServiceWorker(
-      const WebURL& pattern,
+      const WebURL& scope,
       const WebURL& script_url,
       blink::mojom::ScriptType script_type,
       mojom::ServiceWorkerUpdateViaCache update_via_cache,
@@ -213,14 +239,24 @@ TEST_F(ServiceWorkerContainerTest, Register_CrossOriginScriptIsRejected) {
                          "current origin ('https://www.example.com')."));
 }
 
+TEST_F(ServiceWorkerContainerTest, Register_UnsupportedSchemeIsRejected) {
+  SetPageURL("https://www.example.com");
+  TestRegisterRejected(
+      "https://www.example.com",
+      "wss://www.example.com/",  // Only support http and https
+      ExpectTypeError(
+          "Failed to register a ServiceWorker: The URL protocol "
+          "of the scope ('wss://www.example.com/') is not supported."));
+}
+
 TEST_F(ServiceWorkerContainerTest, Register_CrossOriginScopeIsRejected) {
   SetPageURL("https://www.example.com");
   TestRegisterRejected(
       "https://www.example.com",
-      "wss://www.example.com/",  // Differs by protocol
+      "http://www.example.com/",  // Differs by protocol
       ExpectDOMException("SecurityError",
                          "Failed to register a ServiceWorker: The origin of "
-                         "the provided scope ('wss://www.example.com') does "
+                         "the provided scope ('http://www.example.com') does "
                          "not match the current origin "
                          "('https://www.example.com')."));
 }
@@ -271,14 +307,14 @@ class StubWebServiceWorkerProvider {
     ~WebServiceWorkerProviderImpl() override = default;
 
     void RegisterServiceWorker(
-        const WebURL& pattern,
+        const WebURL& scope,
         const WebURL& script_url,
         blink::mojom::ScriptType script_type,
         mojom::ServiceWorkerUpdateViaCache update_via_cache,
         std::unique_ptr<WebServiceWorkerRegistrationCallbacks> callbacks)
         override {
       owner_.register_call_count_++;
-      owner_.register_scope_ = pattern;
+      owner_.register_scope_ = scope;
       owner_.register_script_url_ = script_url;
       owner_.script_type_ = script_type;
       owner_.update_via_cache_ = update_via_cache;
